@@ -7,6 +7,7 @@
       <w>cais</w>
       <w>changelog</w>
       <w>commentlist</w>
+      <w>endif</w>
       <w>enqueue</w>
       <w>firefox</w>
       <w>grav</w>
